<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.danycarreto.tenenciapp.RegistroAutoActivity"
    tools:showIn="@layout/activity_registro">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_marca"
            android:layout_width="@dimen/form_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtMarca"
                android:hint="@string/marca"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_subMarca"
            android:layout_width="@dimen/form_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text_input_layout_marca">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtSubMarca"
                android:hint="@string/sub_marca"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_placas"
            android:layout_width="@dimen/form_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text_input_layout_subMarca">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPlacas"
                android:hint="@string/placas"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnModelo"
            android:layout_width="@dimen/form_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_input_layout_placas"
            android:text="@string/modelo"/>

        <Button
            android:id="@+id/btnEngomado"
            android:layout_width="@dimen/form_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnModelo"
            android:text="@string/engomado"/>


        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnEngomado"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/registrar"/>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
